# Python-Elo-System

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  elo_system.py  example.py  pyproject.toml  setup.py
.github/workflows/: javascript.yml  python-publish.yml  python-test.yml  python.yml
elo_system/: __about__.py  __init__.py  elo_system.py  player.py
python/: README.md  elo_system.py  pyproject.toml  test_elo_system.py  tox.ini
python/elo_system/: __init__.py  elo_system.py  player.py
python/tests/: __init__.py  test_elo_system.py
tests/: test_elo_system.py  test_elosystem.py  test_ranked_system.py
typescript/: .editorconfig  .eslintrc.json  README.md  eslint.config.js  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: elo_system.ts  player.ts
typescript/test/: elo_system.test.ts  ranked_system.test.ts
