[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elo-system"
description = 'Yet another Python Implementation of the Elo rating system.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
    { name = "Kraktoos", email = "kraktoos@gmail.com" },
    { name = "Samuel Wu", email = "twopizza9621536@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/TwoPizza9621536/elo-system#readme"
Issues = "https://github.com/TwoPizza9621536/elo-system/issues"
Source = "https://github.com/TwoPizza9621536/elo-system"

[tool.hatch.version]
path = "elo_system/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=elo_system --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["pylint", "black", "isort", "flake8"]

[tool.hatch.envs.lint.scripts]
format = ["pylint .", "isort .", "black .", "flake8 ."]

[tool.pylint.messages_control]
confidence = "HIGH"
enable = "E, W"
jobs = 8

[tool.pylint.format]
max-line-length = 79

[tool.black]
ensure-newline-before-comments = true
line-length = 79
target-version = ["py37", "py38", "py39", "py310"]
use-parentheses = true
skip-string-normalization = true

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
profile = "black"
use_parentheses = true

[tool.coverage.run]
branch = true
parallel = true
omit = ["elo_system/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
